Added width/height attributes

--- a/ui/svg.reel/svg.html
+++ b/ui/svg.reel/svg.html
@@ -14,7 +14,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="Svg">
-    </div>
+    <svg data-montage-id="owner" width="1" height="1" class="Svg">
+    </svg>
 </body>
 </html>
